// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when uncolored should match snapshot 1`] = `
<em
  className=""
>
  *
</em>
`;

exports[`with default props should match snapshot 1`] = `
<em
  className="colored"
>
  *
</em>
`;
